Banner responsive in header section and align fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body{
 }
 header{
     background-color: #FFFBF0;
-    height: 650px;
+    height: 100vh;
 }
 /*------------------ 
     style for utilities
